--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -299,6 +299,7 @@ html body {
 			float:none;
 			margin-top:0;
 			margin-bottom:0;
+			width:100%;
 		}
 		.article-thumbnail {
 			display:none;
