Add ascent number to projects with style
* Echo ascent number above the project title
* Add styles to the headings
* Add mobile style to the headings

--- a/scss/asc.css
+++ b/scss/asc.css
@@ -1,4 +1,4 @@
-/* line 35, asc.scss */
+/* line 36, asc.scss */
 html body {
   height: 100%;
   font-family: "Roboto", sans-serif;
@@ -6,7 +6,7 @@ html body {
   color: #343232;
   background-color: white;
 }
-/* line 41, asc.scss */
+/* line 42, asc.scss */
 html body #spine.asc-heavy-gray #glue:before {
   background-color: #4e4c4b;
   color: white;
@@ -14,15 +14,15 @@ html body #spine.asc-heavy-gray #glue:before {
   width: 1000px;
   position: absolute;
 }
-/* line 49, asc.scss */
+/* line 50, asc.scss */
 html body #spine #glue, html body #spine #glue:before {
   width: 222px;
 }
-/* line 52, asc.scss */
+/* line 53, asc.scss */
 html body #spine #wsu-signature {
   background-image: url(/wp-content/uploads/sites/192/2015/01/ascent-logo.png);
 }
-/* line 56, asc.scss */
+/* line 57, asc.scss */
 html body #spine #side-search-area input#s {
   width: 196px;
   height: 37px;
@@ -40,30 +40,30 @@ html body #spine #side-search-area input#s {
   letter-spacing: 1px;
   color: #eeeeec;
 }
-/* line 72, asc.scss */
+/* line 73, asc.scss */
 html body #spine #side-search-area input#s:hover, html body #spine #side-search-area input#s:focus {
   border: 1px solid #0094ca;
 }
-/* line 79, asc.scss */
+/* line 80, asc.scss */
 html body #spine:not(.cropped) .spine-navigation {
   padding-bottom: 0px;
 }
-/* line 83, asc.scss */
+/* line 84, asc.scss */
 html body #spine .spine-sitenav {
   margin-left: 0;
   margin-right: 0;
   padding-top: 8px;
 }
-/* line 87, asc.scss */
+/* line 88, asc.scss */
 html body #spine .spine-sitenav ul li {
   border-style: none;
 }
-/* line 89, asc.scss */
+/* line 90, asc.scss */
 html body #spine .spine-sitenav ul li ul {
   margin: 8px 0 8px 0;
   background-color: #343232;
 }
-/* line 95, asc.scss */
+/* line 96, asc.scss */
 html body #spine .spine-sitenav a {
   font-size: 1.2em;
   letter-spacing: 1px;
@@ -72,7 +72,7 @@ html body #spine .spine-sitenav a {
   color: white;
   border-left: #4e4c4b solid 8px;
 }
-/* line 102, asc.scss */
+/* line 103, asc.scss */
 html body #spine .spine-sitenav a:hover {
   border-left: #747270 solid 8px;
   color: white;
@@ -80,38 +80,38 @@ html body #spine .spine-sitenav a:hover {
   font-weight: 300;
   cursor: pointer;
 }
-/* line 110, asc.scss */
+/* line 111, asc.scss */
 html body #spine .spine-sitenav li.dogeared > a {
   color: white;
   background-color: #747270;
   border-left: #0094ca solid 8px;
   font-weight: 300;
 }
-/* line 116, asc.scss */
+/* line 117, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a {
   background-image: none;
   padding-left: 1em;
 }
-/* line 119, asc.scss */
+/* line 120, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li:first-child > a:hover {
   background-image: none;
   background-color: #747270;
 }
-/* line 124, asc.scss */
+/* line 125, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a {
   background-image: none;
 }
-/* line 126, asc.scss */
+/* line 127, asc.scss */
 html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:before, html body #spine .spine-sitenav:not(.homeless) > ul > li.active:first-child > a:hover {
   background-image: none;
   background-color: #747270;
 }
-/* line 132, asc.scss */
+/* line 133, asc.scss */
 html body #spine #side-latest-news {
   /* Remove hidden if we decide to use */
   display: none;
 }
-/* line 135, asc.scss */
+/* line 136, asc.scss */
 html body #spine #side-latest-news h4 {
   color: white;
   text-transform: uppercase;
@@ -125,7 +125,7 @@ html body #spine #side-latest-news h4 {
   border-top: 1px solid #747270;
   padding-top: 30px;
 }
-/* line 148, asc.scss */
+/* line 149, asc.scss */
 html body #spine #side-latest-news .side-latest-news-box {
   height: 100%;
   width: 178px;
@@ -137,12 +137,12 @@ html body #spine #side-latest-news .side-latest-news-box {
   color: white;
   clear: both;
 }
-/* line 159, asc.scss */
+/* line 160, asc.scss */
 html body #spine #side-latest-news h5 {
   font-size: 1.2em;
   padding-bottom: 1em;
 }
-/* line 163, asc.scss */
+/* line 164, asc.scss */
 html body #spine #side-latest-news .rmore {
   display: block;
   width: 80px;
@@ -155,28 +155,28 @@ html body #spine #side-latest-news .rmore {
   text-align: center;
   background-color: #0094ca;
 }
-/* line 173, asc.scss */
+/* line 174, asc.scss */
 html body #spine #side-latest-news .rmore a {
   display: block;
   height: 100%;
   width: 100%;
   color: white;
 }
-/* line 176, asc.scss */
+/* line 177, asc.scss */
 html body #spine #side-latest-news .rmore:hover, html body #spine #side-latest-news .rmore:focus {
   padding: 4px;
   background-color: #4e4c4b;
   cursor: pointer;
   border: 1px solid #0094ca;
 }
-/* line 183, asc.scss */
+/* line 184, asc.scss */
 html body #spine .spine-footer {
   color: white;
   font-size: 1.3em;
   line-height: 1.1em;
   width: 178px;
 }
-/* line 189, asc.scss */
+/* line 190, asc.scss */
 html body #spine .spine-global-links {
   margin-top: 22px;
   padding-top: 22px;
@@ -184,50 +184,50 @@ html body #spine .spine-global-links {
   clear: both;
   border-color: #747270;
 }
-/* line 198, asc.scss */
+/* line 199, asc.scss */
 html body main a {
   color: #0094ca;
   text-decoration: underline;
 }
-/* line 201, asc.scss */
+/* line 202, asc.scss */
 html body main a:hover {
   color: #747270;
 }
-/* line 205, asc.scss */
+/* line 206, asc.scss */
 html body main h1 {
   color: #0094ca;
   font-weight: 700;
   font-size: 3em;
-  line-height: 1.1em;
+  line-height: 1.2em;
   padding-bottom: 1em;
 }
-/* line 209, asc.scss */
+/* line 210, asc.scss */
 html body main h2 {
   color: #0094ca;
   font-weight: 700;
   font-size: 2.2em;
   line-height: 1.1em;
 }
-/* line 212, asc.scss */
+/* line 213, asc.scss */
 html body main h3 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.8em;
   line-height: 1.1em;
 }
-/* line 215, asc.scss */
+/* line 216, asc.scss */
 html body main h4 {
   color: #0094ca;
   font-weight: 700;
   font-size: 1.2em;
   line-height: 1.1em;
 }
-/* line 218, asc.scss */
+/* line 219, asc.scss */
 html body main p, html body main ul, html body main ol {
   font-size: 1.4em;
   line-height: 1.6em;
 }
-/* line 223, asc.scss */
+/* line 224, asc.scss */
 html body main figure.featured-image {
   width: 50%;
   height: 100%;
@@ -240,42 +240,42 @@ html body main figure.featured-image {
   margin-left: -270px;
   margin-right: 30px;
 }
-/* line 234, asc.scss */
+/* line 235, asc.scss */
 html body main figure.featured-image img {
   position: fixed;
   height: 100%;
 }
-/* line 239, asc.scss */
+/* line 240, asc.scss */
 html body main .page, html body main .wsuwp_uc_project {
   width: 50%;
   margin-right: 150px;
   margin-top: 65px;
   float: right;
 }
-/* line 243, asc.scss */
+/* line 244, asc.scss */
 html body main .wsuwp_uc_project {
   margin-right: 120px;
 }
-/* line 246, asc.scss */
+/* line 247, asc.scss */
 html body main .post, html body main .wsuwp_uc_project, html body main .wsuwp_uc_publication, html body main .wsuwp_uc_person, html body main .wsuwp_uc_entity, html body main #tribe-events-pg-template {
   margin-left: 70px;
 }
-/* line 250, asc.scss */
+/* line 251, asc.scss */
 html body main .post .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_project .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_publication .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_person .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main .wsuwp_uc_entity .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], html body main #tribe-events-pg-template .tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"] {
   background-color: #0094ca;
 }
-/* line 255, asc.scss */
+/* line 256, asc.scss */
 html body main .post #tribe-bar-form, html body main .wsuwp_uc_project #tribe-bar-form, html body main .wsuwp_uc_publication #tribe-bar-form, html body main .wsuwp_uc_person #tribe-bar-form, html body main .wsuwp_uc_entity #tribe-bar-form, html body main #tribe-events-pg-template #tribe-bar-form {
   background: white;
   color: #343232;
 }
-/* line 258, asc.scss */
+/* line 259, asc.scss */
 html body main .post #tribe-bar-form input[type=email], html body main .post #tribe-bar-form input[type=password], html body main .post #tribe-bar-form input[type=text], html body main .post #tribe-bar-form select, html body main .post #tribe-bar-form textarea, html body main .wsuwp_uc_project #tribe-bar-form input[type=email], html body main .wsuwp_uc_project #tribe-bar-form input[type=password], html body main .wsuwp_uc_project #tribe-bar-form input[type=text], html body main .wsuwp_uc_project #tribe-bar-form select, html body main .wsuwp_uc_project #tribe-bar-form textarea, html body main .wsuwp_uc_publication #tribe-bar-form input[type=email], html body main .wsuwp_uc_publication #tribe-bar-form input[type=password], html body main .wsuwp_uc_publication #tribe-bar-form input[type=text], html body main .wsuwp_uc_publication #tribe-bar-form select, html body main .wsuwp_uc_publication #tribe-bar-form textarea, html body main .wsuwp_uc_person #tribe-bar-form input[type=email], html body main .wsuwp_uc_person #tribe-bar-form input[type=password], html body main .wsuwp_uc_person #tribe-bar-form input[type=text], html body main .wsuwp_uc_person #tribe-bar-form select, html body main .wsuwp_uc_person #tribe-bar-form textarea, html body main .wsuwp_uc_entity #tribe-bar-form input[type=email], html body main .wsuwp_uc_entity #tribe-bar-form input[type=password], html body main .wsuwp_uc_entity #tribe-bar-form input[type=text], html body main .wsuwp_uc_entity #tribe-bar-form select, html body main .wsuwp_uc_entity #tribe-bar-form textarea, html body main #tribe-events-pg-template #tribe-bar-form input[type=email], html body main #tribe-events-pg-template #tribe-bar-form input[type=password], html body main #tribe-events-pg-template #tribe-bar-form input[type=text], html body main #tribe-events-pg-template #tribe-bar-form select, html body main #tribe-events-pg-template #tribe-bar-form textarea {
   color: #343232;
   font-family: "Roboto", sans-serif;
   font-size: 1.2em;
 }
-/* line 264, asc.scss */
+/* line 265, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
 input[type=submit], html body main .wsuwp_uc_publication #tribe-bar-form .tribe-bar-submit
@@ -288,7 +288,7 @@ input[type=submit] {
   font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
 }
-/* line 268, asc.scss */
+/* line 269, asc.scss */
 html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:hover, html body main .post #tribe-bar-form .tribe-bar-submit
 input[type=submit]:focus, html body main .wsuwp_uc_project #tribe-bar-form .tribe-bar-submit
@@ -307,47 +307,66 @@ input[type=submit]:focus {
   border: 1px solid #0094ca;
   padding: 9px;
 }
-/* line 277, asc.scss */
+/* line 278, asc.scss */
 html body main footer.main-footer {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 286, asc.scss */
+/* line 287, asc.scss */
 .datepicker.dropdown-menu {
   color: #343232;
   font-family: "Roboto", sans-serif !important;
 }
 
-/* line 292, asc.scss */
+/* line 293, asc.scss */
 .single-wsuwp_uc_project footer {
   display: none;
 }
-
 /* line 298, asc.scss */
+.single-wsuwp_uc_project header.article-header hgroup .ascent-num-box {
+  width: 35%;
+  border-bottom: 1px solid #cbcbcb;
+  margin-bottom: 1.4em;
+}
+/* line 303, asc.scss */
+.single-wsuwp_uc_project header.article-header hgroup h3.ascent-num-title {
+  font-weight: 300;
+  display: inline-block;
+  font-size: 1.2em;
+  color: #cbcbcb;
+}
+/* line 309, asc.scss */
+.single-wsuwp_uc_project header.article-header hgroup h2.ascent-num {
+  display: inline-block;
+  font-size: 4em;
+  color: #cbcbcb;
+}
+
+/* line 319, asc.scss */
 .tax-wsuwp_uc_topics main .wsuwp_uc_project, .post-type-archive-wsuwp_uc_project main .wsuwp_uc_project {
   float: none;
   margin-top: 0;
   margin-bottom: 0;
   width: 100%;
 }
-/* line 304, asc.scss */
+/* line 325, asc.scss */
 .tax-wsuwp_uc_topics main .article-thumbnail, .post-type-archive-wsuwp_uc_project main .article-thumbnail {
   display: none;
 }
 
-/* line 310, asc.scss */
+/* line 331, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
-/* line 317, asc.scss */
+/* line 338, asc.scss */
 .post-type-archive main h1, .single-wsuwp_uc_person main h1, .tax-wsuwp_uc_topics main h1 {
   margin-left: 50px;
 }
-/* line 321, asc.scss */
+/* line 342, asc.scss */
 .post-type-archive main h2.article-title, .single-wsuwp_uc_person main h2.article-title, .tax-wsuwp_uc_topics main h2.article-title {
   font-size: 1.2em;
   font-weight: 300;
@@ -357,26 +376,26 @@ html body main footer.main-footer {
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 340, asc.scss */
+  /* line 361, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 343, asc.scss */
+  /* line 364, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 349, asc.scss */
+  /* line 370, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 352, asc.scss */
+  /* line 373, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 356, asc.scss */
+  /* line 377, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -384,7 +403,7 @@ html body main footer.main-footer {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 364, asc.scss */
+  /* line 385, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -393,24 +412,28 @@ html body main footer.main-footer {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 372, asc.scss */
+  /* line 393, asc.scss */
   html body .page, html body .wsuwp_uc_project {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 377, asc.scss */
+  /* line 398, asc.scss */
   html body .post, html body .wsuwp_uc_project, html body .wsuwp_uc_publication, html body .wsuwp_uc_person, html body .wsuwp_uc_entity, html body #tribe-events-pg-template {
     margin-left: 0 !important;
   }
 
-  /* line 383, asc.scss */
+  /* line 404, asc.scss */
   .post-type-archive main h1, .single-wsuwp_uc_person main h1, .single-wsuwp_uc_project main h1 {
     margin-left: 0px;
   }
+  /* line 407, asc.scss */
+  .post-type-archive main h2.ascent-num, .single-wsuwp_uc_person main h2.ascent-num, .single-wsuwp_uc_project main h2.ascent-num {
+    padding-top: 0;
+  }
 }
 @media screen and (min-width: 2100px) {
-  /* line 391, asc.scss */
+  /* line 415, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
