Adds titles to Topics list
Adds titles to Topics pages
Adjust styles to condense the SASS

--- a/scss/asc.css
+++ b/scss/asc.css
@@ -344,53 +344,56 @@ html body main footer.main-footer {
   color: #cbcbcb;
 }
 
-/* line 321, asc.scss */
-.post-type-archive-wsuwp_uc_project header.article-header hgroup .ascent-num-box, .tax-wsuwp_uc_topics header.article-header hgroup .ascent-num-box {
-  display: inline-block;
-  width: 40px;
-  margin-top: 1em;
-}
-/* line 325, asc.scss */
-.post-type-archive-wsuwp_uc_project header.article-header hgroup .ascent-num-box h3.ascent-num-title, .tax-wsuwp_uc_topics header.article-header hgroup .ascent-num-box h3.ascent-num-title {
-  display: none;
-}
-/* line 328, asc.scss */
-.post-type-archive-wsuwp_uc_project header.article-header hgroup .ascent-num-box h2.ascent-num, .tax-wsuwp_uc_topics header.article-header hgroup .ascent-num-box h2.ascent-num {
-  width: 40px;
-  font-size: 1.3em;
-  color: #cbcbcb;
-  padding-right: 0;
-}
-/* line 337, asc.scss */
-.post-type-archive-wsuwp_uc_project h2.article-title, .tax-wsuwp_uc_topics h2.article-title {
-  display: inline-block;
-  width: 90%;
-  padding-left: 0 !important;
-}
-
-/* line 345, asc.scss */
+/* line 320, asc.scss */
 .tax-wsuwp_uc_topics main .wsuwp_uc_project, .post-type-archive-wsuwp_uc_project main .wsuwp_uc_project {
   float: none;
   margin-top: 0;
   margin-bottom: 0;
   width: 100%;
 }
-/* line 351, asc.scss */
+/* line 326, asc.scss */
 .tax-wsuwp_uc_topics main .article-thumbnail, .post-type-archive-wsuwp_uc_project main .article-thumbnail {
   display: none;
 }
+/* line 331, asc.scss */
+.tax-wsuwp_uc_topics main header.article-header hgroup .ascent-num-box, .post-type-archive-wsuwp_uc_project main header.article-header hgroup .ascent-num-box {
+  display: inline-block;
+  width: 40px;
+  margin-top: 1em;
+}
+/* line 335, asc.scss */
+.tax-wsuwp_uc_topics main header.article-header hgroup .ascent-num-box h3.ascent-num-title, .post-type-archive-wsuwp_uc_project main header.article-header hgroup .ascent-num-box h3.ascent-num-title {
+  display: none;
+}
+/* line 338, asc.scss */
+.tax-wsuwp_uc_topics main header.article-header hgroup .ascent-num-box h2.ascent-num, .post-type-archive-wsuwp_uc_project main header.article-header hgroup .ascent-num-box h2.ascent-num {
+  width: 40px;
+  font-size: 1.3em;
+  color: #cbcbcb;
+  padding-right: 0;
+}
+/* line 347, asc.scss */
+.tax-wsuwp_uc_topics main h2.article-title, .post-type-archive-wsuwp_uc_project main h2.article-title {
+  display: inline-block;
+  width: 90%;
+  padding-left: 0 !important;
+}
+/* line 352, asc.scss */
+.tax-wsuwp_uc_topics main figure.featured-image, .post-type-archive-wsuwp_uc_project main figure.featured-image {
+  display: none;
+}
 
-/* line 357, asc.scss */
+/* line 358, asc.scss */
 .blog main {
   margin-left: 200px;
   margin-top: 75px;
 }
 
-/* line 364, asc.scss */
+/* line 365, asc.scss */
 .post-type-archive main h1, .single-wsuwp_uc_person main h1, .tax-wsuwp_uc_topics main h1 {
   margin-left: 50px;
 }
-/* line 368, asc.scss */
+/* line 369, asc.scss */
 .post-type-archive main h2.article-title, .single-wsuwp_uc_person main h2.article-title, .tax-wsuwp_uc_topics main h2.article-title {
   font-size: 1.2em;
   font-weight: 300;
@@ -400,26 +403,26 @@ html body main footer.main-footer {
 }
 
 @media screen and (max-device-width: 791px) {
-  /* line 387, asc.scss */
+  /* line 388, asc.scss */
   html body #binder #spine header {
     background-color: #0094ca;
   }
-  /* line 390, asc.scss */
+  /* line 391, asc.scss */
   html body #binder #spine #wsu-signature {
     background-image: url(/wp-content/uploads/sites/192/2015/01/mobile-logo.png);
     background-repeat: no-repeat;
     background-size: 18% !important;
     background-position: center 12px !important;
   }
-  /* line 396, asc.scss */
+  /* line 397, asc.scss */
   html body #binder #spine #side-search-area {
     margin-top: 22px;
   }
-  /* line 399, asc.scss */
+  /* line 400, asc.scss */
   html body #binder #spine #side-latest-news {
     display: none;
   }
-  /* line 403, asc.scss */
+  /* line 404, asc.scss */
   html body #binder .shelved button#shelve, html body #binder .unshelved button#shelve {
     background: url(/wp-content/uploads/sites/192/2015/01/menu.png);
     background-repeat: no-repeat;
@@ -427,7 +430,7 @@ html body main footer.main-footer {
     background-color: #4e4c4b;
     display: block;
   }
-  /* line 411, asc.scss */
+  /* line 412, asc.scss */
   html body figure.featured-image {
     position: relative !important;
     display: block;
@@ -436,28 +439,28 @@ html body main footer.main-footer {
     float: none;
     margin-left: 0px !important;
   }
-  /* line 419, asc.scss */
+  /* line 420, asc.scss */
   html body .page, html body .wsuwp_uc_project {
     float: none;
     width: 100% !important;
     margin: 0 !important;
   }
-  /* line 424, asc.scss */
+  /* line 425, asc.scss */
   html body .post, html body .wsuwp_uc_project, html body .wsuwp_uc_publication, html body .wsuwp_uc_person, html body .wsuwp_uc_entity, html body #tribe-events-pg-template {
     margin-left: 0 !important;
   }
 
-  /* line 430, asc.scss */
+  /* line 431, asc.scss */
   .post-type-archive main h1, .single-wsuwp_uc_person main h1, .single-wsuwp_uc_project main h1 {
     margin-left: 0px;
   }
-  /* line 433, asc.scss */
+  /* line 434, asc.scss */
   .post-type-archive main h2.ascent-num, .single-wsuwp_uc_person main h2.ascent-num, .single-wsuwp_uc_project main h2.ascent-num {
     padding-top: 0;
   }
 }
 @media screen and (min-width: 2100px) {
-  /* line 441, asc.scss */
+  /* line 442, asc.scss */
   html body #binder.fluid.max-1980 {
     max-width: 3000px;
   }
