--- a/scss/asc.scss
+++ b/scss/asc.scss
@@ -315,31 +315,6 @@ html body {
 		}
 	}
 }
-.post-type-archive-wsuwp_uc_project, .tax-wsuwp_uc_topics {
-		header.article-header {
-		hgroup {
-			.ascent-num-box {
-					display:inline-block;
-					width:40px;
-					margin-top:1em;
-				h3.ascent-num-title { 
-					display:none;
-				}
-				h2.ascent-num {
-					width:40px;
-					font-size:1.3em;
-					color:$medium-gray;
-					padding-right:0;
-				}
-			}
-		}
-	}
-	h2.article-title {
-		display:inline-block;
-		width:90%;
-		padding-left:0 !important;
-	}
-}
 .tax-wsuwp_uc_topics, .post-type-archive-wsuwp_uc_project {
 	main {
 		.wsuwp_uc_project {
@@ -351,6 +326,32 @@ html body {
 		.article-thumbnail {
 			display:none;
 		}
+		header.article-header {
+			hgroup {
+				.ascent-num-box {
+					display:inline-block;
+					width:40px;
+					margin-top:1em;
+					h3.ascent-num-title { 
+						display:none;
+					}
+					h2.ascent-num {
+						width:40px;
+						font-size:1.3em;
+						color:$medium-gray;
+						padding-right:0;
+					}
+				}
+			}
+		}
+	h2.article-title {
+		display:inline-block;
+		width:90%;
+		padding-left:0 !important;
+	}
+	figure.featured-image {
+		display:none;
+	}
 	}
 }
 .blog {
