Testing BG position effect on images
Adding background position:0px so it centers the images based off the
center

--- a/scss/asc.css
+++ b/scss/asc.css
@@ -178,6 +178,7 @@ html body {
     width: 50%;
     height: 100%;
     position: fixed;
+    background-position: 0px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
